# Ti_V0.1

./: .gitignore  CNAME  README.md  app.js  benchmark_gue.py  diagnose.py  diagnose_spectrum.py  index.html  pyproject.toml  quick_sigma_diagnostic.py  rh_control_test.py  run_experiment.py  run_phase1.py  run_phase2a.py  run_phase2b.py  run_sigma_sweep.py  sigma_criticality_test.py  verify_fe_transport.py  verify_holonomy.py  verify_resonant_holonomy.py
.claude-plugin/: marketplace.json
docs/: ARCHITECTURE.md  EXPERIMENT_LOG.md  FALSIFICATION_IDOS.md  GUIDE.md  PLUGIN_STACK.md  RESULTS.md  TECHNICAL_AUDIT.md
output/: SURGICAL_VERDICT_2026-03-23.md  SURGICAL_VERDICT_2026-03-23_AMENDED.md  analysis_report.json  kpm_fixed_cutoff.json  kpm_scaling.json  phase3c_torch_k100_results.json  phase3d_torch_k200_results.json  phase3e_control_battery_results.json  phase3e_test2_rerun_results.json
scripts/: DEPLOYMENT.md  aggregate_results.py  capture_golden_values.py  pack_for_remote.sh  runpod_rocm_setup.sh  runpod_setup.sh  validate_thermodynamic_scaling.py
tests/: test_analytical_h0.py  test_feature_maps.py  test_kpm.py  test_lanczos.py  test_phase1_integration.py  test_phase2_plots.py  test_phase2a_abelian.py  test_protocols.py  test_regression.py  test_sheaf_types.py  test_sparse_sheaf_laplacian.py  test_statistical_tests.py  test_torch_sheaf_laplacian.py  test_transport_maps.py
vc-proposal/: 00_EXECUTIVE_SUMMARY.md  01_TECHNICAL_DEEP_DIVE.md  02_MARKET_AND_COMMERCIALIZATION.md  03_IP_AND_DEFENSIBILITY.md  04_RISK_MATRIX.md  05_VALIDATION_EVIDENCE.md  INDEX.md  (+2 more)
(+118 files in other folders)
